--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "json-loader": "^0.5.7",
-    "vite": "^4.1.0"
+    "vite": "^4.4.9"
   }
 }
