--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.10.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
