--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@swc/core": "^1.13.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
