--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "firebase": "^10.10.0",
@@ -20,10 +22,15 @@
   },
   "devDependencies": {
     "@swc/core": "^1.13.3",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "jsdom": "^26.1.0",
     "json-loader": "^0.5.7",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vitest": "^3.2.4"
   }
 }
